Fix some periodic updates error

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
             </intent-filter>
             <meta-data
                 android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyAucPvpGPMMlWPbWzS5GpBSMhtHe6WKLNI" />
+                android:value="@string/google_maps_key" />
         </activity>
-        <service android:name=".FetchAddressIntentService"
-            android:exported="false" />
+        <!--<service android:name=".FetchAddressIntentService"
+            android:exported="false" />-->
     </application>
 
 </manifest>
